# SOS

./: .gitignore  LICENSE  README.md
examples/: and.sos  bincomp.sos  cat.sos  helloworld.sos  hexdump.sos  ifelse.sos  loopingcounter.sos  not.sos  while.sos
examples/rule_110/: .gitignore  Makefile  rule110.nw  rule110.sos  test110.sos  testif.sos  testreadbit.sos  testreadstate.sos  testwritebit.sos  testwritestate.sos
interpreter/: CMakeLists.txt  Makefile  bitwise_io.cc  bitwise_io.h  interpret.cc  interpret.h  sos.cc  stack_class.cc  stack_class.h
